--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,4 @@
 {
-  "**/*.{js,jsx}": [ "eslint --fix", "prettier --write" ],
-  "**/*.css": [ "prettier --write" ]
+  "**/*.{js,jsx,ts,tsx}": ["eslint --fix", "prettier --write"],
+  "**/*.css": ["prettier --write"]
 }
