--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@tanstack/react-table": "^8.20.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "recharts": "^2.13.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
