--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.1.4",
     "@tanstack/react-table": "^8.20.5",
     "lucide-react": "^0.456.0",
     "react": "^18.3.1",
